# clip_local

./: abnt.py  api.py  apiAbnt.py  apiDino.py  apiE5.py  apiFashionClip.py  apiFashnParser.py  apiLegalBert.py  apiMarqoFashionClip.py  apiMiniLM.py  clip.py  dino.py  e5.py  fashionClip.py  fashnParser.py  gemma4.py  legalBert.py  main.py  marqoFashionClip.py  miniLM.py  pyproject.toml
